--- a/frontend/rooms.html
+++ b/frontend/rooms.html
@@ -3371,6 +3371,7 @@ document.addEventListener('DOMContentLoaded', function() {
     roomFilter.addEventListener('change', applyFilters);
 
     populateRoomFilter();
+    applyFilters();
 });
 </script>
 </body></html>
